--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta property="og:description"   content="Roster and Team generator" />
 		<meta name="description" content="Roster USMNT soccer players across leagues and clubs (Chelsea, Juventus, Dortmund, Lille, Barcelona) and player like Pulisic, McKennie, Adams, Weah etc"/> 
 		<meta name="keywords" content="Pulisic, USMNT, soccer, McKennie, Juventus, Chelsea, MLS, Sounders, World Cup, Gold cup, Barcelona, Dest, Adams, Reyna, Dortmund, Weah, Lille, NYC FC, Orlando City, USSoccer"/>
-
+		<link rel="icon" type="image/png" sizes="250x250" href="images/USSoccer.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
 			.flag {width:20px; height:20px;border: 1px solid gray;margin-right:5px; border-radius: 10px; }
