--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
 						<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 					</div>
 					<img src="images/USSoccer.png" width="75" height="75" style="position:absolute; top:10px; left:480px"/>
+					<span style="font-size:8.5pt;position:absolute; top:1px; left:475px">oureleven.com</span>
 				</div>
 			</article>
 
@@ -524,7 +525,7 @@
 			<div style="font-size:11pt;">LB</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
-		<div onclick="choosePlayer('MF', 5);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:180px; left:230px;">
+		<div onclick="choosePlayer('DF', 5);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:180px; left:230px;">
 			<div style="font-size:11pt;">CB</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
@@ -536,11 +537,11 @@
 			<div style="font-size:11pt;">MF</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
-		<div onclick="choosePlayer('FW', 8);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:450px; left:50px;">
+		<div onclick="choosePlayer('MF', 8);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:450px; left:50px;">
 			<div style="font-size:11pt;">MF</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
-		<div onclick="choosePlayer('FW', 9);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:450px; left:410px;">
+		<div onclick="choosePlayer('MF', 9);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:450px; left:410px;">
 			<div style="font-size:11pt;">MF</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
@@ -549,6 +550,7 @@
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
 		<img src="images/USSoccer.png" width="75" height="75" style="position:absolute; top:10px; left:480px"/>
+		<span style="font-size:8.5pt;position:absolute; top:1px; left:475px">oureleven.com</span>
 	</div>
 </article>
 
@@ -595,7 +597,7 @@
 			<div style="font-size:11pt;">MF</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
-		<div onclick="choosePlayer('FW', 9);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:370px; left:410px;">
+		<div onclick="choosePlayer('MF', 9);" style="width:100px;background:black;border-radius:6px;height:100px;position:absolute;top:370px; left:410px;">
 			<div style="font-size:11pt;">MF</div>
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
@@ -604,6 +606,7 @@
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
 		<img src="images/USSoccer.png" width="75" height="75" style="position:absolute; top:10px; left:480px"/>
+		<span style="font-size:8.5pt;position:absolute; top:1px; left:475px">oureleven.com</span>
 	</div>
 </article>
 
@@ -659,6 +662,7 @@
 			<img src="images/shadow.png" width="70" height="70" style="filter: grayscale(0.8);"/>
 		</div>
 		<img src="images/USSoccer.png" width="75" height="75" style="position:absolute; top:10px; left:480px"/>
+		<span style="font-size:8.5pt;position:absolute; top:1px; left:475px">oureleven.com</span>
 	</div>
 </article>
 		<!-- Portfolio -->
