--- a/staging.html
+++ b/staging.html
@@ -38,13 +38,14 @@
 
 		<script type="text/javascript" src="./js/dom-to-image.min.js"></script>
 		<script type="text/javascript" src="./js/utility.js"></script>
+		<script type="text/javascript" src="./js/formationdata.js"></script>
 		<script type="text/javascript" src="./js/Formation.js"></script>
 
 		<script>
 
 			const formation = new Formation();
 			formation.populate();
-			
+
 			const gkSet = new Set();
 			const dfSet = new Set();
 			const mfSet = new Set();
