Move players to JSON

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 		<script type="text/javascript" src="./js/dom-to-image.min.js"></script>
 		<script type="text/javascript" src="./js/utility.js"></script>
-		<script type="text/javascript" src="./js/formationdata.js"></script>
 		<script type="text/javascript" src="./js/Formation.js"></script>
+		<script type="text/javascript" src="./js/Players.js"></script>
 
 		<script>
 
