--- a/staging.html
+++ b/staging.html
@@ -196,7 +196,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<p class="formationDesc"></p>
-						<a clsss="formSelectionButton" class="button large scrolly"></a>
+						<a class="formSelectionButton" class="button large scrolly"></a>
 					</section>
 				</div>
 			</div>
