--- a/staging.html
+++ b/staging.html
@@ -193,10 +193,10 @@
 					</article>
 				</div>
 				<!-- choose team block -->
-				<div class="col-4 col-6-medium col-12-small">
+				<div class="col-4 col-6-medium col-12-small" style="display:none;">
 					<section class="box style1">
 						<p class="formationDesc"></p>
-						<a class="formSelectionButton" class="button large scrolly"></a>
+						<a class="button large scrolly formSelectionButton"></a>
 					</section>
 				</div>
 			</div>
