fix team alias link

--- a/mls/index.html
+++ b/mls/index.html
@@ -184,14 +184,14 @@
 							<a class="button" style="background-color: white;color:white;">Choose</a>
 						</section>
 					</div>
-					<div class="col-4 col-6-medium col-12-small" onclick="location.href='new-york-red-city-fc/index.html';">
+					<div class="col-4 col-6-medium col-12-small" onclick="location.href='new-york-city-fc/index.html';">
 						<section class="box style1" style="background-color:darkblue;">
 							<span style="width:50px;color:lightskyblue;"></span>
 							<div style="color:white;font-size:13pt;">New York City FC</div>
 							<a class="button" style="background-color: skyblue;color:white;">Choose</a>
 						</section>
 					</div>
-					<div class="col-4 col-6-medium col-12-small" onclick="location.href='orlando-city/index.html';">
+					<div class="col-4 col-6-medium col-12-small" onclick="location.href='orlando-city-sc/index.html';">
 						<section class="box style1" style="background-color:purple;">
 							<span style="width:50px;color:lightskyblue;"></span>
 							<div style="color:white;font-size:13pt;">Orlando City</div>
