--- a/mls/index.html
+++ b/mls/index.html
@@ -149,7 +149,7 @@
 							<a class="button" style="background-color: black;color:white;">Choose</a>
 						</section>
 					</div>
-					<div class="col-4 col-6-medium col-12-small" onclick="location.href='minnesota-united/index.html';">
+					<div class="col-4 col-6-medium col-12-small" onclick="location.href='minnesota-united-fc/index.html';">
 						<section class="box style1" style="background-color:lightslategray;">
 							<span style="width:50px;color:lightskyblue;"></span>
 							<div style="color:black;font-size:13pt;">Minnesota United</div>
