--- a/mls/d-c-united/index.html
+++ b/mls/d-c-united/index.html
@@ -48,6 +48,7 @@
 		<script>
 			window.onload = () => {
                 populate();
+		document.getElementById('generated_teamName').innerText = teamName.toUpperCase()
                 document.getElementById('fan_greetings').innerHTML = teamName.toUpperCase() + " " + document.getElementById('fan_greetings').innerHTML
                 document.getElementsByName('keywords')[0].setAttribute("content", teamName + " mls, team selector, soccer, squad")
                 let json = formationData()
@@ -151,8 +152,8 @@
 			<article class="wrapper style3" id="generated_area" style="display:none;">
 				<div class="container">
 					<header>
-						<img src="../images/USSoccer.png" width="100" height="100"/><h2>My USMNT Team</h2>
-						<p>oureleven.com</p>
+						<h2>My Starting 11</h2>
+						<p id="generated_teamName"></p>
 					</header>
 					<div class="row" id="roster_generated">
 					</div>
