--- a/solana.html
+++ b/solana.html
@@ -129,7 +129,7 @@
                 let newState = !state;
 
                 // updating state to blockchain
-                // updateWeekSlot(day, hour, newState);
+                updateWeekSlot(day, hour, newState);
 
                 // set render state
                 el.setAttribute('state', (newState == true) ? '1' : '0'); 
